2001-09-07  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (gtest_LDADD): added GCONF_LIBS

	* htmltextslave.c (get_offset_for_bounded_width): for ' ' search
	in sep instead of text->text
	(calc_size): test for split only for slave->posLen > 1
	(calc_size): split only if pos > 0

2001-09-06  Radek Doulik  <rodo@ximian.com>

	* htmlimage.c (update_or_redraw): new helper function, takes care
	about updating when new data arrives thru stream. It schedules
	update only if image size changed, otherwise it just redraws
	(html_image_factory_end_pixbuf): use update_or_redraw
	(html_image_factory_area_prepared): ditto

2001-09-03  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (parse_table): don't discard broken tables

2001-09-01  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (copy): make a reference.
	(html_image_factory_unregister): fix this properly.

2001-08-31  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_factory_unregister): change the test now
	that we unref before we remove.

2001-08-31  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cursor.c: define stipple colors on the
	beggining, it will make it easier for tigert to tune stipple
	lines colors

2001-08-30  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (draw_highlighted): updated to use faster line
	offset calculation using html_painter_calc_text_width

	* htmlpainter.c (calc_text_bytes_delta): new helper function, it
	does 1st pass of translating \t and &nbsp; - calculates right size
	of translated string
	(translate_text_special_chars): 2nd pass which finally translates
	\t and &nbsp;
	(put_last): helper inline function
	(html_painter_draw_text): use new translating function
	(html_painter_calc_text_width): ditto
	(html_painter_calc_text_width): changed line_offset to pointer, we
	update line_offset now to line offset on the end of string

	* htmltext.c (split_word_width): removed as it's broken, don't
	bother with it for now
